fixed display errors on small screens

--- a/styles.css
+++ b/styles.css
@@ -27,6 +27,7 @@ a:hover {
 }
 
 h1 {
+  margin: 2vh 0;
   line-height: 1.4;
   font-size: 4rem;
 }
@@ -88,8 +89,8 @@ h1 {
   justify-content: center;
   align-items: center;
   position: relative;
-  width: 500px;
-  height: 500px;
+  width: 80vw;
+  height: 80vh;
   background: linear-gradient(118.38deg, #29323c -4.6%, #485563 200.44%);
   box-shadow: -8px -8px 20px #2a333d, 10px 7px 20px #475462;
   border-radius: 30px;
